--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "doc-builder",
   "version": "0.1.0",
   "private": true,
-  "proxy":"https://localhost:7029/",
+  "proxy":"https://designresponseapi.azurewebsites.net",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
