--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "drawflow": "^0.0.58",
     "history": "^5.3.0",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
@@ -43,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/drawflow": "^0.0.4"
   }
 }
